--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Te extraño :c</title>
     <style>
-        body {
+        body{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -13,188 +13,176 @@
             background-color: #ffedfb;
             margin: 0;
         }
-        .container {
+        .container{
             position: relative;
         }
-        .letter {
+        .letter{
             position: relative;
-            top: 5vh;
+            top: 75px;
             cursor: pointer;
             animation: up 3s linear infinite;
         }
-        @keyframes up {
-            0%, 100% {
+        @keyframes up{
+            0%, 100%{
                 transform: translateY(0);
             }
-            50% {
-                transform: translateY(-2.5vh);
+            50%{
+                transform: translateY(-45px);
             }
         }
-        .letter:hover .card {
-            transform: translateY(-20vh);
+        .letter:hover .card{
+            transform: translateY(-200px);
         }
-        .envelope {
+        .envelope{
             position: relative;
-            width: 80vw;
-            max-width: 450px;
-            height: 20vh;
-            max-height: 300px;
+            width: 450px;
+            height: 300px;
             background-color: #e173a3;
         }
-        .envelope:before {
+        .envelope:before{
             background-color: #e173a3;
             content: '';
             position: absolute;
-            width: 56vw;
-            max-width: 315px;
-            height: 56vw;
-            max-height: 318px;
+            width: 315px;
+            height: 318px;
             transform: rotate(45deg);
-            top: -28vw;
-            left: 12vw;
+            top: -157px;
+            left: 66px;
             border-radius: 60px 0 0 0;
         }
-        .card {
+        .card{
             position: absolute;
             background-color: antiquewhite;
-            width: 72vw;
-            max-width: 405px;
-            height: 17vh;
-            max-height: 255px;
-            top: 1vh;
-            left: 4vw;
+            width: 405px;
+            height: 255px;
+            top: 8px;
+            left: 23px;
             box-shadow: -8px -8px 150px rgba(0, 0, 0, 0.4);
-            transition: transform 0.3s;
         }
-        .card:before {
+        .card:before{
             content: "";
             position: absolute;
-            width: 65vw;
-            max-width: 360px;
-            height: 14vh;
-            max-height: 210px;
-            left: 2.5vw;
-            top: 2vh;
+            width: 360px;
+            height: 210px;
+            left: 18px;
+            top: 18px;
         }
-        .text {
+        .text{
             position: relative;
             font-family: 'Brush Script MT', cursive;
-            font-size: 4vw;
-            max-font-size: 18px;
+            font-size: 18px;
             font-weight: bold;
             text-align: center;
-            line-height: 6vw;
+            line-height: 30px;
+            top: 8px;
             color: #7c082f;
         }
-        .text2 {
+        .text2{
             position: relative;
             font-family: 'Brush Script MT', cursive;
-            font-size: 3.5vw;
-            max-font-size: 16px;
+            font-size: 16px;
             text-align: center;
-            line-height: 6vw;
+            line-height: 30px;
+            top: 8px;
             color: #7c082f;
         }
-        .hearts {
+        .hearts{
             position: absolute;
-            top: 3vh;
+            top: 22px;
         }
-        @keyframes heart {
-            0% {
+        @keyframes heart{
+            0%{
                 transform: translateY(0) rotate(-45deg) scale(0.3);
                 opacity: 1;
             }
-            100% {
-                transform: translateY(-10vh) rotate(-45deg) scale(1.3);
+            100%{
+                transform: translateY(-150px) rotate(-45deg) scale(1.3);
                 opacity: 0.5;
             }
         }
-        .one, .two, .three, .four, .five {
+        .one, .two, .three, .four, .five{
             background-color: rgb(255, 0, 106);
             display: inline-block;
-            height: 3vw;
-            width: 3vw;
-            max-width: 15px;
-            max-height: 15px;
-            margin: 0 2vw;
+            height: 15px;
+            width: 15px;
+            margin: 0 25px;
             position: relative;
             transform: rotate(-45deg);
+            top: -97px;
         }
-        .one:before, .one:after, .two:before, .two:after, .three:before, .three:after, .four:before, .four:after, .five:before, .five:after {
+        .one:before, .one:after, .two:before, .two:after, .three:before, .three:after, .four:before, .four:after, .five:before, .five:after{
             content: '';
             background-color: red;
             border-radius: 50%;
-            width: 3vw;
-            height: 3vw;
-            max-width: 15px;
-            max-height: 15px;
+            width: 15px;
+            height: 15px;
             position: absolute;
         }
-        .one:before, .two:before, .three:before, .four:before, .five:before {
-            top: -1.5vw;
-            left: 0;
+        .one:before, .two:before, .three:before, .four:before, .five:before{
+            top: -7px;
+            left: 0px;
         }
-        .one:after, .two:after, .three:after, .four:after, .five:after {
-            left: 1.5vw;
-            top: 0;
+        .one:after, .two:after, .three:after, .four:after, .five:after{
+            left: 7px;
+            top: 0px;
         }
-        .one {
-            left: 5vw;
+        .one{
+            left: 25px;
             animation: heart 1s ease-out infinite;
         }
-        .two {
-            left: 6vw;
+        .two{
+            left: 30px;
             animation: heart 2s ease-out infinite;
         }
-        .three {
-            left: 8vw;
+        .three{
+            left: 42px;
             animation: heart 1.5s ease-out infinite;
         }
-        .four {
-            left: 10vw;
+        .four{
+            left: 53px;
             animation: heart 2.3s ease-out infinite;
         }
-        .five {
-            left: 12vw;
+        .five{
+            left: 68px;
             animation: heart 1.7s ease-out infinite;
         }
-        .front {
+        .front{
             position: absolute;
-            border-right: 48vw solid #f98aba;
-            border-top: 25vh solid transparent;
-            border-bottom: 26vh solid transparent;
-            left: 32vw;
-            top: 1vh;
+            border-right: 270px solid #f98aba;
+            border-top: 142px solid transparent;
+            border-bottom: 150px solid transparent;
+            left: 180px;
+            top: 8px;
             width: 0;
             height: 0;
             z-index: 10;
         }
-        .front:before {
+        .front:before{
             position: absolute;
             content: '';
-            border-left: 80vw solid #ffb9d7;
-            border-top: 52vh solid transparent;
-            left: -32vw;
-            top: -25vh;
+            border-left: 450px solid #ffb9d7;
+            border-top: 292px solid transparent;
+            left: -180px;
+            top: -142px;
             width: 0;
             height: 0;
         }
-        .shadow {
+        .shadow{
             position: absolute;
-            width: 88vw;
-            height: 6vh;
+            width: 495px;
+            height: 38px;
             border-radius: 50%;
             background-color: #54263a67;
-            top: 58vh;
-            left: -4vw;
+            top: 398px;
+            left: -22px;
             z-index: -1;
             animation: scale 3s linear infinite;
         }
-        @keyframes scale {
-            0%, 100% {
+        @keyframes scale{
+            0%, 100%{
                 transform: scaleX(1);
             }
-            50% {
+            50%{
                 transform: scaleX(0);
             }
         }
